# atlas_macro

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  DEPLOY_LINUX.md  README.md  pyproject.toml
docs/: api.md  architecture.md  classifier.md
scripts/: atlas-daily.service  atlas-daily.timer  atlas-dashboard.service  daily_cron.sh  deploy_linux.sh  run_daily.py  run_scheduler.py
src/atlas_macro/: __init__.py  config.py  types.py
src/atlas_macro/classifier/: __init__.py  engine.py
src/atlas_macro/dashboard/: __init__.py  app.py
src/atlas_macro/dashboard/components/: __init__.py  driver_panel.py  history_chart.py  metric_cards.py  state_indicator.py
src/atlas_macro/explain/: __init__.py  generator.py
src/atlas_macro/features/: __init__.py  correlation.py  credit.py  rates.py  volatility.py
src/atlas_macro/ingest/: __init__.py  fetcher.py
src/atlas_macro/normalization/: __init__.py  normalizer.py
src/atlas_macro/pipeline/: __init__.py  daily.py
tests/: conftest.py
tests/test_classifier/: test_engine.py
tests/test_explain/: test_generator.py
tests/test_features/: test_correlation.py  test_credit.py  test_rates.py  test_volatility.py
tests/test_normalization/: test_normalizer.py
tests/test_pipeline/: test_daily.py
