[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas-macro"
version = "1.0.0"
description = "ATLAS MACRO - Macro-Level Market Constraint & Stress Diagnostic"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ATLAS Team"},
]
keywords = ["macro", "volatility", "stress-testing", "market-diagnostics"]

dependencies = [
    "aiohttp>=3.9.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "aioresponses>=0.7.6",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_macro"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (may use I/O)",
    "api: Tests that require API keys",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["atlas_macro"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
